<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".HelpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="93dp"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_burger_round" />

        <TextView
            android:layout_width="176dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/pacifico"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_help_1"
            android:textSize="13sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_help_2"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_help_3"
            android:textSize="13sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pacifico"
            android:textColor="@color/colorPrimary"
            android:text="@string/text_contact"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/email_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_email_button"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

</LinearLayout>